objects/Cosmetovigilance_Form__c.object
<CustomObject>
    <label>Cosmetovigilance</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Cosmetovigilance Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cosmetovigilance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Cosmetovigilance_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Case__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                    <default>true</default>
                    <label>Mrs</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not communicated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Axis_1__c</fullName>
        <formula>Product_Name_1__r.CosmetoAxis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axis 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_2__c</fullName>
        <formula>Product_Name_2__r.CosmetoAxis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axis 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_3__c</fullName>
        <formula>Product_Name_3__r.CosmetoAxis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axis 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Non-binary</fullName>
                </value>
                <value>
                    <fullName>Not communicated</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Misuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Case__r.Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Authority officer</fullName>
                </value>
                <value>
                    <fullName>Health professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Beauty advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status Cosmetovigilance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Client contacted</fullName>
                </value>
                <value>
                    <fullName>Awaiting customer</fullName>
                </value>
                <value>
                    <fullName>Sent to Ennov</fullName>
                    <label>Sent to Safetybook</label>
                </value>
                <value>
                    <fullName>Sent to vigilance partner</fullName>
                </value>
                <value>
                    <fullName>In progress with vigilance partner</fullName>
                </value>
                <value>
                    <fullName>Vigilance partner investigation done</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy__c</fullName>
        <label>Allergy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pollen</fullName>
                </value>
                <value>
                    <fullName>Henna tatoo/hair coloration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Case__r.Contact.CosmetoCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completely recovered</fullName>
                </value>
                <value>
                    <fullName>Partially recovered</fullName>
                </value>
                <value>
                    <fullName>Not recovered</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Pharmacovigilance: product has a regulatory status (OTC, DIN,…)
Misuse: improper use of the product</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Misuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Indicate if there was a diagnosis, a treatment was administrated or if there was a selfcare treatment.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>TEXT( Case__r.Language )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <formula>Case__r.Contact.CosmetoRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptoms__c</fullName>
        <label>Symptoms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.heat sensation</fullName>
                </value>
                <value>
                    <fullName>2.dryness</fullName>
                </value>
                <value>
                    <fullName>3.stinging</fullName>
                </value>
                <value>
                    <fullName>4.skin tightness</fullName>
                </value>
                <value>
                    <fullName>5.burning sensation</fullName>
                </value>
                <value>
                    <fullName>6.itching</fullName>
                </value>
                <value>
                    <fullName>7.watery eyes</fullName>
                </value>
                <value>
                    <fullName>8.redness</fullName>
                </value>
                <value>
                    <fullName>9.pimple</fullName>
                </value>
                <value>
                    <fullName>10.pustule</fullName>
                </value>
                <value>
                    <fullName>11.blister</fullName>
                </value>
                <value>
                    <fullName>12.oedema</fullName>
                </value>
                <value>
                    <fullName>13.peeling skin</fullName>
                </value>
                <value>
                    <fullName>14.oozing</fullName>
                </value>
                <value>
                    <fullName>15.erosion</fullName>
                </value>
                <value>
                    <fullName>16.pigmentation</fullName>
                </value>
                <value>
                    <fullName>17.depigmentation</fullName>
                </value>
                <value>
                    <fullName>18.nausea</fullName>
                </value>
                <value>
                    <fullName>19.pain</fullName>
                </value>
                <value>
                    <fullName>20.other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Case__r.Contact.CosmetoZip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPurged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPurged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_type__c</fullName>
        <label>Case type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accident</fullName>
                </value>
                <value>
                    <fullName>Misuse</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duty_free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duty free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intensity__c</fullName>
        <inlineHelpText>Select from 1 to 10</inlineHelpText>
        <label>Intensity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skin_type__c</fullName>
        <label>Skin type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dry</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Normal-combination</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>Oily</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <inlineHelpText>If stopped definitely</inlineHelpText>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <formula>Case__r.Contact.CosmetoCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation accepted</fullName>
                </value>
                <value>
                    <fullName>Investigation on hold customer&apos;s decision</fullName>
                </value>
                <value>
                    <fullName>Investigation refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Journalist</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Profesionnal Consulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_exposure__c</fullName>
        <inlineHelpText>Re-exposure after skin was healed</inlineHelpText>
        <label>Re-exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes with reaction</fullName>
                </value>
                <value>
                    <fullName>Yes with no reaction</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_1__c</fullName>
        <formula>Product_Name_1__r.CosmetoProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <formula>Product_Name_2__r.CosmetoProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <formula>Product_Name_3__r.CosmetoProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_taken__c</fullName>
        <label>Action taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stopped temporarily</fullName>
                </value>
                <value>
                    <fullName>Stopped definitely</fullName>
                </value>
                <value>
                    <fullName>Ongoing use</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Code_1__c</fullName>
        <label>Batch Code 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Code_2__c</fullName>
        <label>Batch Code 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Code_3__c</fullName>
        <label>Batch Code 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reusing_Date__c</fullName>
        <inlineHelpText>If stopped temporarily</inlineHelpText>
        <label>Reusing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>See_a_doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>See a doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ennov_case_ID__c</fullName>
        <externalId>true</externalId>
        <label>SafetyBook ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>More_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_motive__c</fullName>
        <label>Status motive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting form creation</fullName>
                </value>
                <value>
                    <fullName>Awaiting vigilance partner follow up  acceptance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptoms_site__c</fullName>
        <label>Symptoms site</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Armpit</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Cheeks</fullName>
                </value>
                <value>
                    <fullName>Chest</fullName>
                </value>
                <value>
                    <fullName>Chin</fullName>
                </value>
                <value>
                    <fullName>Ears</fullName>
                </value>
                <value>
                    <fullName>Eye</fullName>
                </value>
                <value>
                    <fullName>Eyebrows</fullName>
                </value>
                <value>
                    <fullName>Eye contour</fullName>
                </value>
                <value>
                    <fullName>Eyelashes</fullName>
                </value>
                <value>
                    <fullName>Eyelids</fullName>
                </value>
                <value>
                    <fullName>Face</fullName>
                </value>
                <value>
                    <fullName>Foot</fullName>
                </value>
                <value>
                    <fullName>Forehead</fullName>
                </value>
                <value>
                    <fullName>Hair</fullName>
                </value>
                <value>
                    <fullName>Jaw</fullName>
                </value>
                <value>
                    <fullName>Lip contour</fullName>
                </value>
                <value>
                    <fullName>Lips</fullName>
                </value>
                <value>
                    <fullName>Nail</fullName>
                </value>
                <value>
                    <fullName>Neck</fullName>
                </value>
                <value>
                    <fullName>Nose</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Misuse__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Reporter__c</fullName>
        <label>Email Reporter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Frequency_Unit__c</fullName>
        <label>Frequency of use - Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per hour</fullName>
                </value>
                <value>
                    <fullName>Per day</fullName>
                </value>
                <value>
                    <fullName>Per week</fullName>
                </value>
                <value>
                    <fullName>Per month</fullName>
                </value>
                <value>
                    <fullName>Per year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Overnight Admission</inlineHelpText>
        <label>Hospital visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plus de filtre Commercial USer = Catalog Sales pour le packaging</description>
        <label>Product Name 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cosmetovigilance (Product Name 1)</relationshipLabel>
        <relationshipName>Cosmetovigilance_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plus de filtre Commercial USer = Catalog Sales pour le packaging</description>
        <label>Product Name 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cosmetovigilance (Product Name 2)</relationshipLabel>
        <relationshipName>Cosmetovigilance_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plus de filtre Commercial USer = Catalog Sales pour le packaging</description>
        <label>Product Name 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cosmetovigilance (Product Name 3)</relationshipLabel>
        <relationshipName>Cosmetovigilance_Form2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Label_EN_1__c</fullName>
        <formula>Product_Name_1__r.SAP_Label_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Label EN 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Label_EN_2__c</fullName>
        <formula>Product_Name_2__r.SAP_Label_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Label EN 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Label_EN_3__c</fullName>
        <formula>Product_Name_3__r.SAP_Label_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Label EN 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive_case__c</fullName>
        <label>Sensitive case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Consumer association</fullName>
                </value>
                <value>
                    <fullName>Media Exposure</fullName>
                    <label>Media exposure threat</label>
                </value>
                <value>
                    <fullName>Legal threat</fullName>
                    <label>Legal action threat</label>
                </value>
                <value>
                    <fullName>Premium customer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skin_condition__c</fullName>
        <label>Skin condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acne</fullName>
                </value>
                <value>
                    <fullName>Dryness</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_assessment__c</fullName>
        <formula>IF(
	OR(
		ISPICKVAL(Potential_Serious_Undesirable_Effect__c,&quot;Yes&quot;),
		OR
			(
				INCLUDES(Sensitive_case__c,&quot;Health Professional&quot;),
				INCLUDES(Sensitive_case__c,&quot;Consumer association&quot;),
				INCLUDES(Sensitive_case__c,&quot;Media Exposure&quot;),
				INCLUDES(Sensitive_case__c,&quot;Legal threat&quot;),
				INCLUDES(Sensitive_case__c,&quot;Premium customer&quot;),
				INCLUDES(Sensitive_case__c,&quot;Influencer&quot;)
				
			),
		INCLUDES(Symptoms__c,&quot;9.pimple&quot;),
		INCLUDES(Symptoms__c,&quot;10.pustule&quot;),
		INCLUDES(Symptoms__c,&quot;11.blister&quot;),
		INCLUDES(Symptoms__c,&quot;12.oedema&quot;),
		INCLUDES(Symptoms__c,&quot;13.peeling skin&quot;),
		INCLUDES(Symptoms__c,&quot;14.oozing&quot;),
		INCLUDES(Symptoms__c,&quot;15.erosion&quot;),
		INCLUDES(Symptoms__c,&quot;16.pigmentation&quot;),
		INCLUDES(Symptoms__c,&quot;17.depigmentation&quot;),
		INCLUDES(Symptoms__c,&quot;18.nausea&quot;),
		INCLUDES(Symptoms__c,&quot;19.pain&quot;),
		INCLUDES(Symptoms__c,&quot;20.other&quot;),
		AND(
			OR(INCLUDES(Symptoms__c,&quot;7.watery eyes&quot;),INCLUDES(Symptoms__c,&quot;8.redness&quot;)),
			OR(
				INCLUDES(Symptoms__c,&quot;1.heat sensation&quot;),
				INCLUDES(Symptoms__c,&quot;2.dryness&quot;),
				INCLUDES(Symptoms__c,&quot;3.stinging&quot;),
				INCLUDES(Symptoms__c,&quot;2.dryness&quot;),
				INCLUDES(Symptoms__c,&quot;4.skin tightness&quot;),
				INCLUDES(Symptoms__c,&quot;5.burning sensation&quot;),
				INCLUDES(Symptoms__c,&quot;6.itching&quot;)

			)
		)

	)
,
&quot;INTOLERANCE&quot;
,
IF(
OR(
INCLUDES(Symptoms__c,&quot;1.heat sensation&quot;),
INCLUDES(Symptoms__c,&quot;2.dryness&quot;),
INCLUDES(Symptoms__c,&quot;3.stinging&quot;),
INCLUDES(Symptoms__c,&quot;2.dryness&quot;),
INCLUDES(Symptoms__c,&quot;4.skin tightness&quot;),
INCLUDES(Symptoms__c,&quot;5.burning sensation&quot;),
INCLUDES(Symptoms__c,&quot;6.itching&quot;),
INCLUDES(Symptoms__c,&quot;7.watery eyes&quot;),
INCLUDES(Symptoms__c,&quot;8.redness&quot;)

),


&quot;DISCOMFORT&quot;,
&quot;NOT APPLICABLE&quot;

	)
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Outcome__c</fullName>
        <inlineHelpText>Please specify in English. Comments must be factual, objective, non-discriminatory and non aggresive. They could be read by the client himself</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>Case__r.Contact.CosmetoAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_abroad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase abroad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SafetyBookImage__c</fullName>
        <formula>IMAGE(&quot;https://parfumschristiandior--uat--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0687Z000001bJdV&amp;operationContext=CHATTER&amp;contentId=05T7Z000004GN9d&quot;, &apos;Image&apos;, 50, 50)</formula>
        <label>SafetyBook Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_medication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self medication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Reporter__c</fullName>
        <label>Address Reporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>